Alteração dos nomes das paginas linkadas no index
Estava dando erro ao tentar acessar as paginas infância e adolescência, o erro estava no link, que estavam iniciando nome das paginas com a primeira letra em caixa alta. foi feito correção.

--- a/meusite/index.html
+++ b/meusite/index.html
@@ -20,8 +20,8 @@
             <!-- <img src="Imagens/logo1.png" alt="Wesley Logo"> -->
             <ul>
                 <li><a href="index.html" title="Página incial">Eu</a></li>
-                <li><a href="Infancia.html" title="minha infancia">Infância</a></li>
-                <li><a href="Adolescencia.html" title="minha adolescencia">Adolescência</a></li>
+                <li><a href="infancia.html" title="minha infancia">Infância</a></li>
+                <li><a href="adolescencia.html" title="minha adolescencia">Adolescência</a></li>
                 <li><a href="juventude.html" title="minha juventude">Juventude</a></li>
                 <!--<li><a href="Idoso.html" title="fim da vida">Atualmente Idoso</a></li> -->
             </ul>
