--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +15,8 @@
     <hr>
 
     <p>Este é o primeiro arquivo sendo criado para ser visualizado como site, durante período de teste e conhecimento</p>
+    
+    <p> O importante é Evoluir, tendo em vista isso, não houve tratamento dos arquivos, entre a execução na atividade e postagem aqui, justamente para ser tem uma linha do tempo da evolução </P
 
 </body>
 </html>
